@@ -511,14 +511,14 @@ Also see [[AdvancedOptions]]</pre>
 </div>
 <!--POST-SHADOWAREA-->
 <div id="storeArea">
-<div title="ClassDiagram" modifier="StevenStallion" created="200911302323" modified="200912010036" changecount="8">
+<div title="Class Diagram" modifier="Steven Stallion" created="200912011933" modified="200912012157" changecount="2">
 <pre>[img[Class Diagram|images/class.png]]</pre>
 </div>
-<div title="ColorPalette" modifier="YourName" created="200911302008" modified="200912010332" changecount="15">
+<div title="ColorPalette" modifier="Steven Stallion" created="200911302008" modified="200912011920" changecount="17">
 <pre>Background: #fff
 Foreground: #000
-PrimaryPale: #666
-PrimaryLight: #900
+PrimaryPale: #eee
+PrimaryLight: #ccc
 PrimaryMid: #600
 PrimaryDark: #600
 SecondaryPale: #eee
@@ -532,128 +532,147 @@ TertiaryDark: #666
 Error: #f88
 </pre>
 </div>
-<div title="DefaultTiddlers" modifier="StevenStallion" created="200911302327" changecount="1">
+<div title="Configuration" modifier="Steven Stallion" created="200912011939" modified="200912012324" changecount="21">
+<pre>As with other transports, the multicast transport supports dynamic configuration using the ACE Service Configurator Framework. A svc.conf file should be created which contains the following:
+{{{
+dynamic OpenDDS_DCPS_Multicast_Service Service_Object * OpenDDS_Multicast:_make_MulticastLoader()
+}}}
+It may then be loaded dynamically at runtime by passing the following arguments:
+{{{
+-ORBSvcConf  svc.conf
+}}}
+Alternately, the multicast transport may be statically loaded by including the {{{Multicast.h}}} header (implies static linking):
+{{{
+#ifdef ACE_AS_STATIC_LIBS
+# include &lt;dds/DCPS/transport/multicast/Multicast.h&gt;
+#endif
+}}}
+A number of additional transport configuration options are available:
+{{{
+# Enable/disable IPv6 default group address selection.
+# The default value is 0 (disabled).
+default_to_ipv6=0
+
+# The offset used to determine default port numbers;
+# this value will be added to the transportId. The
+# default value is: 49400.
+port_offset=49400
+
+# The multicast group address from which to send and/or
+# receive data. The default group addresses are:
+#   224.0.0.128:&lt;port&gt; (IPv4), and
+#    [FF01::80]:&lt;port&gt; (IPv6)
+group_address=224.0.0.128:49401
+group_address=[FF01::80]:49401
+
+# Enable/disable reliable communication. This option
+# will eventually be deprecated. The default value
+# is 1 (enabled).
+reliable=1
+
+# The maximum number of milliseconds to wait between
+# handshake attempts during association (reliable only).
+# The default value is 500.
+syn_interval=500
+
+# The maximum number of milliseconds to wait for a
+# SYNACK response during association (reliable only).
+# The default value is 30000 (30 seconds).
+syn_timeout=30000
+
+# The maximum number of milliseconds to wait between
+# repair requests (reliable only). The default value
+# is 2000 (2 seconds).
+nak_interval=2000
+
+# The maximum number of milliseconds to wait before
+# giving up on a NAK response (reliable only). The
+# default value is 30000 (30 seconds).
+nak_timeout=30000
+
+# The number of DCPS datagrams to retain in order to
+# service incoming repair requests (reliable only).
+# The default value is 32.
+nak_repair_size=32
+}}}
+Default examples of these files are provided under the {{{$DDS_ROOT/dds/DCPS/transport/multicast/}}} directory.</pre>
+</div>
+<div title="DefaultTiddlers" modifier="Steven Stallion" created="200912011933" modified="200912012032" changecount="5">
 <pre>[[Overview]]
-[[ClassDiagram]]</pre>
+[[Class Diagram]]
+[[Reliability]]
+[[Configuration]]
+[[Known Issues]]
+[[Future Tasks]]</pre>
 </div>
-<div title="DisableWikiLinksPlugin" modifier="ELSDesignStudios" created="200512092239" modified="200807230133" tags="systemConfig">
-<pre>/***
-|Name|DisableWikiLinksPlugin|
-|Source|http://www.TiddlyTools.com/#DisableWikiLinksPlugin|
-|Version|1.6.0|
-|Author|Eric Shulman|
-|License|http://www.TiddlyTools.com/#LegalStatements|
-|~CoreVersion|2.1|
-|Type|plugin|
-|Description|selectively disable TiddlyWiki's automatic ~WikiWord linking behavior|
-This plugin allows you to disable TiddlyWiki's automatic ~WikiWord linking behavior, so that WikiWords embedded in tiddler content will be rendered as regular text, instead of being automatically converted to tiddler links.  To create a tiddler link when automatic linking is disabled, you must enclose the link text within {{{[[...]]}}}.
-!!!!!Usage
-&lt;&lt;&lt;
-You can block automatic WikiWord linking behavior for any specific tiddler by ''tagging it with&lt;&lt;tag excludeWikiWords&gt;&gt;'' (see configuration below) or, check a plugin option to disable automatic WikiWord links to non-existing tiddler titles, while still linking WikiWords that correspond to existing tiddlers titles or shadow tiddler titles.  You can also block specific selected WikiWords from being automatically linked by listing them in [[DisableWikiLinksList]] (see configuration below), separated by whitespace.  This tiddler is optional and, when present, causes the listed words to always be excluded, even if automatic linking of other WikiWords is being permitted.  
+<div title="Future Tasks" modifier="Steven Stallion" created="200912011940" modified="200912012328" changecount="24">
+<pre>An exponential backoff should be introduced to prevent SYN flooding in large multicast groups. See: {{{OpenDDS::DCPS::SynWatchdog}}}
 
-Note: WikiWords contained in default ''shadow'' tiddlers will be automatically linked unless you select an additional checkbox option lets you disable these automatic links as well, though this is not recommended, since it can make it more difficult to access some TiddlyWiki standard default content (such as AdvancedOptions or SideBarTabs)
-&lt;&lt;&lt;
-!!!!!Configuration
-&lt;&lt;&lt;
-&lt;&lt;option chkDisableWikiLinks&gt;&gt; Disable ALL automatic WikiWord tiddler links
-&lt;&lt;option chkAllowLinksFromShadowTiddlers&gt;&gt; ... except for WikiWords //contained in// shadow tiddlers
-&lt;&lt;option chkDisableNonExistingWikiLinks&gt;&gt; Disable automatic WikiWord links for non-existing tiddlers
-Disable automatic WikiWord links for words listed in: &lt;&lt;option txtDisableWikiLinksList&gt;&gt;
-Disable automatic WikiWord links for tiddlers tagged with: &lt;&lt;option txtDisableWikiLinksTag&gt;&gt;
-&lt;&lt;&lt;
-!!!!!Revisions
-&lt;&lt;&lt;
-2008.07.22 [1.6.0] hijack tiddler changed() method to filter disabled wiki words from internal links[] array (so they won't appear in the missing tiddlers list)
-2007.06.09 [1.5.0] added configurable txtDisableWikiLinksTag (default value: &quot;excludeWikiWords&quot;) to allows selective disabling of automatic WikiWord links for any tiddler tagged with that value.
-2006.12.31 [1.4.0] in formatter, test for chkDisableNonExistingWikiLinks
-2006.12.09 [1.3.0] in formatter, test for excluded wiki words specified in DisableWikiLinksList
-2006.12.09 [1.2.2] fix logic in autoLinkWikiWords() (was allowing links TO shadow tiddlers, even when chkDisableWikiLinks is TRUE).  
-2006.12.09 [1.2.1] revised logic for handling links in shadow content
-2006.12.08 [1.2.0] added hijack of Tiddler.prototype.autoLinkWikiWords so regular (non-bracketed) WikiWords won't be added to the missing list
-2006.05.24 [1.1.0] added option to NOT bypass automatic wikiword links when displaying default shadow content (default is to auto-link shadow content)
-2006.02.05 [1.0.1] wrapped wikifier hijack in init function to eliminate globals and avoid FireFox 1.5.0.1 crash bug when referencing globals
-2005.12.09 [1.0.0] initial release
-&lt;&lt;&lt;
-!!!!!Code
-***/
-//{{{
-version.extensions.DisableWikiLinksPlugin= {major: 1, minor: 6, revision: 0, date: new Date(2008,7,22)};
+A random backoff should be introduced to prevent NAK implosions in large multicast groups. See: {{{OpenDDS::DCPS::NakWatchdog}}}
 
-if (config.options.chkDisableNonExistingWikiLinks==undefined) config.options.chkDisableNonExistingWikiLinks= false;
-if (config.options.chkDisableWikiLinks==undefined) config.options.chkDisableWikiLinks=false;
-if (config.options.txtDisableWikiLinksList==undefined) config.options.txtDisableWikiLinksList=&quot;DisableWikiLinksList&quot;;
-if (config.options.chkAllowLinksFromShadowTiddlers==undefined) config.options.chkAllowLinksFromShadowTiddlers=true;
-if (config.options.txtDisableWikiLinksTag==undefined) config.options.txtDisableWikiLinksTag=&quot;excludeWikiWords&quot;;
+NAK suppression for ranges requested by other peers within the same interval should be implemented to prevent NAK implosions in large multicast groups.
 
-// find the formatter for wikiLink and replace handler with 'pass-thru' rendering
-initDisableWikiLinksFormatter();
-function initDisableWikiLinksFormatter() {
-	for (var i=0; i&lt;config.formatters.length &amp;&amp; config.formatters[i].name!=&quot;wikiLink&quot;; i++);
-	config.formatters[i].coreHandler=config.formatters[i].handler;
-	config.formatters[i].handler=function(w) {
-		// supress any leading &quot;~&quot; (if present)
-		var skip=(w.matchText.substr(0,1)==config.textPrimitives.unWikiLink)?1:0;
-		var title=w.matchText.substr(skip);
-		var exists=store.tiddlerExists(title);
-		var inShadow=w.tiddler &amp;&amp; store.isShadowTiddler(w.tiddler.title);
-		// check for excluded Tiddler
-		if (w.tiddler &amp;&amp; w.tiddler.isTagged(config.options.txtDisableWikiLinksTag))
-			{ w.outputText(w.output,w.matchStart+skip,w.nextMatch); return; }
-		// check for specific excluded wiki words
-		var t=store.getTiddlerText(config.options.txtDisableWikiLinksList);
-		if (t &amp;&amp; t.length &amp;&amp; t.indexOf(w.matchText)!=-1)
-			{ w.outputText(w.output,w.matchStart+skip,w.nextMatch); return; }
-		// if not disabling links from shadows (default setting)
-		if (config.options.chkAllowLinksFromShadowTiddlers &amp;&amp; inShadow)
-			return this.coreHandler(w);
-		// check for non-existing non-shadow tiddler
-		if (config.options.chkDisableNonExistingWikiLinks &amp;&amp; !exists)
-			{ w.outputText(w.output,w.matchStart+skip,w.nextMatch); return; }
-		// if not enabled, just do standard WikiWord link formatting
-		if (!config.options.chkDisableWikiLinks)
-			return this.coreHandler(w);
-		// just return text without linking
-		w.outputText(w.output,w.matchStart+skip,w.nextMatch)
-	}
-}
+An FEC mechanism should be introduced to reduce repair requests and to provide an additional source from which to detect reception gaps apart from {{{LIVELINESS}}}.
 
-Tiddler.prototype.coreAutoLinkWikiWords = Tiddler.prototype.autoLinkWikiWords;
-Tiddler.prototype.autoLinkWikiWords = function()
-{
-	// if all automatic links are not disabled, just return results from core function
-	if (!config.options.chkDisableWikiLinks)
-		return this.coreAutoLinkWikiWords.apply(this,arguments);
-	return false;
-}
+SYNACK's should be predicated on association status to prevent potential denial of service attacks (not currently supported by the ETF).
 
-Tiddler.prototype.disableWikiLinks_changed = Tiddler.prototype.changed;
-Tiddler.prototype.changed = function()
-{
-	this.disableWikiLinks_changed.apply(this,arguments);
-	// remove excluded wiki words from links array
-	var t=store.getTiddlerText(config.options.txtDisableWikiLinksList,&quot;&quot;).readBracketedList();
-	if (t.length) for (var i=0; i&lt;t.length; i++)
-		if (this.links.contains(t[i]))
-			this.links.splice(this.links.indexOf(t[i]),1);
-};
-//}}}</pre>
+{{{DataLink}}}s should be allowed to initiate the removal of an association based on reliability status (not currently supported by the ETF).</pre>
 </div>
-<div title="HandshakeDiagram" modifier="StevenStallion" created="200912010036" changecount="1">
-<pre>[img[Handshake Diagram|images/handshake.png]]</pre>
+<div title="Known Issues" modifier="Steven Stallion" created="200912012032" modified="200912012327" changecount="26">
+<pre>{{{TRANSPORT_PRIORITY}}} is not directly supported by this transport. This is partially due to routing restrictions placed on default group addresses as the selection heuristic assigns from the link-local range. Setting the TOS would provide little to no benefit for multicast datagrams at the cost of additional complexity managing n-way associations by priority key.
+
+Reliability must be configured via the {{{reliable}}} transport configuration option as the ETF currently multiplexes best-effort and reliable data samples across the same {{{DataLink}}}; this effectively disables autonegotiation of reliability between peers at the transport level.
+
+{{{nak_repair_size}}} may not exceed {{{16384}}} due to limits imposed by {{{OpenDDS::DCPS::SequenceNumber}}} comparisons. See: {{{$DDS_ROOT/dds/DCPS/Definitions.h}}}
+
+The current implementation relies on {{{LIVELINESS}}} to periodically send application-level heartbeat messages to aid in detecting reception gaps. If {{{AUTOMATIC_LIVELINESS_QOS}}} (the default) is not used, peers may not detect these gaps in a timely manner leading to unrecoverable data loss.
+
+The current implementation relies on the transport reactor being derived from {{{ACE_Select_Reactor}}}; this ensures only a single thread may be active when sending/receiving data. If the transport reactor implementation is changed, additional locks must be introduced to protect critical sections.</pre>
 </div>
-<div title="MainMenu" modifier="StevenStallion" created="200911302324" modified="200911302327" changecount="2">
+<div title="MainMenu" modifier="Steven Stallion" created="200912011934" modified="200912012032" changecount="7">
 <pre>[[Overview]]
-[[ClassDiagram]]</pre>
+[[Class Diagram]]
+[[Reliability]]
+[[Configuration]]
+[[Known Issues]]
+[[Future Tasks]]</pre>
 </div>
-<div title="OpenDDS" modifier="StevenStallion" created="200911302157" tags="OpenDDS" changecount="1">
+<div title="OpenDDS" modifier="Steven Stallion" created="200911302157" tags="OpenDDS" changecount="1">
 <pre>OpenDDS is an open source C++ implementation of the Object Management Group (OMG) Data Distribution Service (DDS). OpenDDS also supports Java bindings through JNI and can be included with JBoss (ESB) frameworks by means of a JMS wrapper. OpenDDS leverages the ADAPTIVE Communication Environment (ACE) to provide a cross platform environment.
 
 OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
 </div>
-<div title="Overview" modifier="StevenStallion" created="200911302318" modified="200911302323" changecount="3">
-<pre>Overview...</pre>
+<div title="Overview" modifier="Steven Stallion" created="200912011932" modified="200912020033" changecount="78">
+<pre>Starting with the OpenDDS 2.1 release, a new multicast transport is available which replaces the {{{SimpleMcast}}} and {{{ReliableMulticast}}} transports. The source for the {{{multicast}}} transport may be found under {{{$DDS_ROOT/dds/DCPS/transport/multicast/}}} and is available under the general OpenDDS license. 
+
+What follows is a detailed overview of the design, configuration, known issues, and potential future enhancements for the {{{multicast}}} transport:
+
+Unlike other transports, multicast reservations are formed between {{{DomainParticipant}}}s rather than individual publications and subscriptions. This allows any number of associations  belonging to the same pair of participants to re-use an existing {{{DataLink}}}, thereby reducing the amount of resources needed in multicast intensive environments. Another departure is unified support for best-effort and reliable delivery (based on transport configuration). Delivery-specific behavior is consolidated into each concrete {{{MulticastDataLink}}} implementation which allows for the same set of transport strategies to be used regardless of delivery mode.
+
+Two delivery modes are supported: best-effort and reliable.
+* Best-effort delivery imposes the least amount of processing as data is exchanged between peers, however it does not provide any guarantee of reception. Data may be lost due to unresponsive or unreachable peers or received in duplicate. See: {{{OpenDDS::DCPS::BestEffortMulticast}}}
+* Reliable delivery provides for guaranteed delivery of data to associated peers with no duplicates at the cost of additional processing. See: {{{OpenDDS::DCPS::ReliableMulticast}}}
+When a new reservation is made, a remote and local peer identifier is created based on the participant ID of the associated entities. These ~IDs are used to identify each peer within the multicast group. The ETF will always designate the publishing side of the association as the active side of a given {{{DataLink}}}. An active peer will have many passive peers it is associated with and vice-versa. Multicast datagrams will always have the peer ID in the source field of the transport header. See: {{{OpenDDS::DCPS::TransportHeader}}}
+
+The {{{multicast}}} transport may be configured and attached similarly to other transport implementations:
+{{{
+OpenDDS::DCPS::TransportImpl_rch transport_impl =
+  TheTransportFactory-&gt;create_transport_impl(OpenDDS::DCPS::DEFAULT_MULTICAST_ID,
+                                             OpenDDS::DCPS::AUTO_CONFIG);
+
+OpenDDS::DCPS::AttachStatus status = transport_impl-&gt;attach(...);
+if (status != OpenDDS::DCPS::ATTACH_OK) {
+  exit(EXIT_FAILURE);
+}
+}}}
+An MPC base project is also provided for linking against the {{{OpenDDS_Multicast}}} library:
+{{{
+project : dcps_multicast {
+  ...
+}
+}}}</pre>
 </div>
-<div title="PageTemplate" modifier="StevenStallion" created="200911302019" modified="200911302100" changecount="2">
+<div title="PageTemplate" modifier="Steven Stallion" created="200911302019" modified="200911302100" changecount="2">
 <pre>&lt;!--{{{--&gt;
 &lt;div class='header'&gt;
 &lt;div class='headerForeground'&gt;
@@ -672,22 +691,45 @@ OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
 &lt;/div&gt;
 &lt;!--}}}--&gt;</pre>
 </div>
-<div title="RepairDiagram" modifier="StevenStallion" created="200912010036" changecount="1">
-<pre>[img[Repair Diagram|images/repair.png]]</pre>
+<div title="Reliability" modifier="Steven Stallion" created="200912011934" modified="200912020046" changecount="71">
+<pre>DCPS control samples were chosen in lieu of more traditional ~PDUs for the exchange of control information between peers. This allows the transport to leverage existing functionality such as byte ordering and efficient marshaling/demarshaling of data at the cost of a slightly increased payload size.
+
+Reliable delivery is achieved through two primary mechanisms:
+* 2-way peer handshaking (SYN/SYNACK)
+* Negative acknowledgment of missing data (NAK/NAKACK)
+For the purposes of examining the interaction between reliable peers, it helps to narrow our view of the multicast group to two specific peers: The active peer is the publishing side of the {{{DataLink}}}; the passive side will be the //first// peer associated with the link when it was created. It is important to remember that control data will be exchanged among all peers within the multicast group, however disinterested peers will discard any data which is not addressed to them directly.
+!!SYN/SYNACK
+[&lt;img[images/handshake.png]]
+The active peer initiates the handshake by sending {{{MULTICAST_SYN}}} control samples to a specific remote peer at a fixed interval bounded by a timeout.
+
+Upon receiving the {{{MULTICAST_SYN}}} control sample, the passive peer records the current transport sequence value for the active peer and responds with a {{{MULTICAST_SYNACK}}} control sample. This sequence number establishes a value from which we can begin to identify reception gaps.
+
+If the active peer receives the {{{MULTICAST_SYNACK}}} control sample, it then notifies the ETF that the association is valid which will in turn trigger a communication status transition in the DCPS layer. In the event a {{{MULTICAST_SYNACK}}} control sample is not received, an error is logged.
+!!NAK/NAKACK
+[&gt;img[images/repair.png]]
+As each datagram is delivered to the {{{DataLink}}}, the transport sequence value is recorded. Periodically, a watchdog executes and examines the history of datagrams received for reception gaps. The watchdog will first age off any outstanding repair requests which have not been fulfilled by resetting the sequence low-water mark and logging an error. In the event a new reception gap is identified, the {{{DataLink}}} records the current interval and the high-water mark for the received data. It will then issue {{{MULTICAST_NAK}}} control samples to all active peers from which it is missing data.
+
+If the active peer receives a {{{MULTICAST_NAK}}} control sample it examines its send buffer for the missing datagram. If the datagram is no longer available, it sends a {{{MULTICAST_NAKACK}}} control sample to the entire multicast group to suppress further repair requests. If the datagram is still available, it resends the missing data to the entire multicast group.
+
+If the passive peer instead receives a {{{MULTICAST_NAKACK}}} control sample, it will behave just asif the repair request has aged off, suppressing further repair requests.</pre>
 </div>
-<div title="SideBarOptions" modifier="StevenStallion" created="200911302023" changecount="1">
+<div title="SideBarOptions" modifier="Steven Stallion" created="200911302023" changecount="1">
 <pre>&lt;&lt;search&gt;&gt;&lt;&lt;closeAll&gt;&gt;&lt;&lt;permaview&gt;&gt;&lt;&lt;newTiddler&gt;&gt;&lt;&lt;saveChanges&gt;&gt;&lt;&lt;slider chkSliderOptionsPanel OptionsPanel &quot;options »&quot; &quot;Change TiddlyWiki advanced options&quot;&gt;&gt;</pre>
 </div>
-<div title="SiteSubtitle" modifier="StevenStallion" created="200911302000" modified="200911302202" tags="OpenDDS" changecount="2">
+<div title="SiteSubtitle" modifier="Steven Stallion" created="200911302000" modified="200912011939" tags="OpenDDS" changecount="2">
 <pre>Multicast Transport Design</pre>
 </div>
-<div title="SiteTitle" modifier="StevenStallion" created="200911301959" tags="OpenDDS" changecount="1">
+<div title="SiteTitle" modifier="Steven Stallion" created="200911301959" tags="OpenDDS" changecount="1">
 <pre>OpenDDS</pre>
 </div>
-<div title="SiteUrl" modifier="StevenStallion" created="200911302027" changecount="1">
+<div title="SiteUrl" modifier="Steven Stallion" created="200911302027" changecount="1">
 <pre>http://www.ociweb.com/</pre>
 </div>
-<div title="StyleSheet" modifier="StevenStallion" created="200911302014" modified="200911302202" changecount="54">
+<div title="Steven Stallion" modifier="Steven Stallion" created="200912011920" changecount="1">
+<pre>Senior Software Engineer
+[[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
+</div>
+<div title="StyleSheet" modifier="Steven Stallion" created="200911302014" modified="200912011927" changecount="55">
 <pre>a:hover {
     text-decoration: none;
 }
@@ -703,6 +745,11 @@ OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
     border-bottom: 1px solid [[ColorPalette::SecondaryLight]];
 }
 
+.headerForeground a {
+    color:[[ColorPalette::SecondaryDark]];
+    font-weight: bold;
+}
+
 .siteTitle {
     font-weight: bold;
 }
@@ -715,7 +762,7 @@ OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
     float: right;
 }</pre>
 </div>
-<div title="StyleSheetColors" modifier="StevenStallion" created="200911302020" modified="200911302134" changecount="5">
+<div title="StyleSheetColors" modifier="Steven Stallion" created="200911302020" modified="200911302134" changecount="5">
 <pre>/*{{{*/
 body {background:[[ColorPalette::Background]]; color:[[ColorPalette::Foreground]];}
 
