@@ -1,3 +1,11 @@
+Wed Dec  2 00:47:27 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * docs/html/multicast/diagrams/handshake.dia:
+        * docs/html/multicast/images/handshake.png:
+        * docs/html/multicast/index.html:
+
+          Updated multicast transport design documentation.
+
 Wed Dec  2 00:21:11 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
 
         * dds/DCPS/Service_Participant.cpp:
